migrate to aws again

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://ec2-3-89-84-188.compute-1.amazonaws.com:3005/api/
-REACT_APP_BACKEND_URL=http://ec2-3-89-84-188.compute-1.amazonaws.com:3005/
+REACT_APP_API_URL=https://www.spotspotter.space/api/
+REACT_APP_BACKEND_URL=https://www.spotspotter.space/
