--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://spot-spotter.herokuapp.com/api/
-REACT_APP_BACKEND_URL=https://spot-spotter.herokuapp.com/
+REACT_APP_API_URL=https://www.spotspotter.space/api/
+REACT_APP_BACKEND_URL=https://www.spotspotter.space/
